--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
 
 .wp-block-columns {
   display: flex;
+  align-items: normal !important;
+  column-gap: 1.5rem;
 }
 
 .section {
@@ -22,4 +24,8 @@ body {
 
 .section:last-child {
   border-bottom: 0;
+}
+
+.column {
+  flex-basis: 33.33%;
 }
